# caricature_generator

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
scripts/: run_pipeline.py
src/caricature_generator/: __init__.py  cli.py  config.py  logging_utils.py  pipeline.py
src/caricature_generator/models/: __init__.py  diffusers_wrapper.py
src/caricature_generator/postprocessing/: __init__.py  compositing.py
src/caricature_generator/preprocessing/: __init__.py  facial_landmarks.py  image_loader.py  transforms.py
tests/: test_config.py
